# BsplineQuantRegpy

./: .readthedocs.yaml  CHANGELOG.md  README.en.md  README.md  Test_global.py  Test_quik.py  examples  files  lisezmoi.txt  pyproject.toml  pyprojet.toml  pyprojet.toml~  readme.txt  readthedocs.yaml  setup.cfg
api/: bsplinequantregpy.modules.rts  bsplinequantregpy.rts  core.rts  gui.rts
docs/: #conf.py#  bsplinequantregpy.rst  build_all.sh  conf.py  docstring_translation_cache.json  index.html  index.rst  index.rts  init_docs.sh  installation.rst  introduction.rst  modules.rts  modules2.rst2  quick_start.rst  quick_start2.rst  test_traduction.sh  translate_all.py  translate_docstrings.py  translate_docstrings_for_doc.py  translate_readme.py  translate_with_deepseek.py  translate_with_deepseek2.py  translate_with_deepseek3.py  translate_with_deepseek4.py  translate_with_deepseek5.py  translate_with_deepseek6.py  translation_cache.json
docs/_templates/: layout.html
docs/api/: BsplineQuantRegpy.core.rst  BsplineQuantRegpy.examples.rst  BsplineQuantRegpy.gui.rst  BsplineQuantRegpy.models.rst  BsplineQuantRegpy.rst  modules.rst
docs/en/: .buildinfo  bsplinequantregpy.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/en/.doctrees/: bsplinequantregpy.doctree  index.doctree
docs/en/.doctrees/api/: BsplineQuantRegpy.core.doctree  BsplineQuantRegpy.doctree  BsplineQuantRegpy.examples.doctree  BsplineQuantRegpy.gui.doctree  BsplineQuantRegpy.models.doctree  modules.doctree
docs/en/_modules/: BsplineQuantRegpy.html  index.html
docs/en/_modules/BsplineQuantRegpy/: examples.html
docs/en/_modules/BsplineQuantRegpy/core/: bases.html  constraints.html
docs/en/api/: BsplineQuantRegpy.core.html  BsplineQuantRegpy.examples.html  BsplineQuantRegpy.gui.html  BsplineQuantRegpy.html  BsplineQuantRegpy.models.html  modules.html
docs/fr/: .buildinfo  bsplinequantregpy.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/fr/.doctrees/: bsplinequantregpy.doctree  index.doctree
docs/fr/.doctrees/api/: BsplineQuantRegpy.core.doctree  BsplineQuantRegpy.doctree  BsplineQuantRegpy.examples.doctree  BsplineQuantRegpy.gui.doctree  BsplineQuantRegpy.models.doctree  modules.doctree
docs/fr/_modules/: BsplineQuantRegpy.html  index.html
docs/fr/_modules/BsplineQuantRegpy/: examples.html
docs/fr/_sources/api/: BsplineQuantRegpy.core.rst.txt  BsplineQuantRegpy.examples.rst.txt  BsplineQuantRegpy.models.rst.txt  modules.rst.txt
docs/fr/_static/js/: versions.js
docs/fr/api/: BsplineQuantRegpy.core.html  BsplineQuantRegpy.examples.html  BsplineQuantRegpy.gui.html  BsplineQuantRegpy.html  BsplineQuantRegpy.models.html  modules.html
docs/locale/: index.pot
docs/locale/.doctrees/: environment.pickle  index.doctree
docs/locale/en/LC_MESSAGES/: index.mo  index.po  installation.mo  installation.po  introduction.mo  introduction.po  quick_start.mo  quick_start.po  quick_start2.mo  quick_start2.po
docs/locale/en/LC_MESSAGES/api/: modules.mo  (+1 more)
docs/locale/fr/LC_MESSAGES/: index.po  installation.mo  installation.po  introduction.po  quick_start.po  quick_start2.po
docs/locale/pot/: index.pot  installation.pot  introduction.pot  quick_start.pot  quick_start2.pot
docs/locale/pot/.doctrees/: index.doctree  installation.doctree  introduction.doctree  quick_start.doctree  quick_start2.doctree
docs/locale/pot/api/: modules.pot
docs/locale/pot/user_guide/: basic_example.pot  comparison_example.pot  logistic_example.pot  temperature_example.pot  usage.pot
docs/user_guide/: basic_example.rst  comparison_example.rst  logistic_example.rst  temperature_example.rst  usage.rst
examples/: Test_temp.py  __init__.py  comparison_example.py  comparison_example.py~  data_height_wEurope.ods  example_basic.py  example_basic.py~  example_basic2.py~  example_basicbak.py  example_logistic.py  example_logistic_0.py  example_temperature.py  logistic_example.py  logistic_example.py~  temp.csv  temp.xls
scripts/: __init__.py  run_comparison.py  run_comparison_example.py  run_gui.py  run_gui.py~  run_gui2.py  test_temperature.py
src/BsplineQuantRegpy/: __init__.py  __init__.py~  __version__.py
src/BsplineQuantRegpy/core/: __init__.py  bases.py  bases2.py  bases2.py~  build_bspline_deriv_matrix.py~  constraints.py  constraints.py~
src/BsplineQuantRegpy/examples/: __init__.py  comparison_example.py  quick_start.py  quick_start2.py
src/BsplineQuantRegpy/gui/: Quant_reg_tk.py  Quant_reg_tk.py~  Quant_reg_tk3.py  Quant_reg_tk4.py  Quant_reg_tk5.py  Quant_reg_tk_new.py  Quant_reg_tk_old.py  Quant_reg_tk_old.py~  __init__.py
src/BsplineQuantRegpy/models/: #quantile_reg.py#  SplineCubicQuantBspkn3_V3_der3_b.py~  SplineCubicQuantBspkn3_V4_der3.py~  __init__.py  quantile_reg.py  quantile_reg.py~
test/: Test_OK.py  Test_global.py  Test_global.py~
(+37 files in other folders)
