[project]
name = "BsplineQuantRegpy"
version = "1.0.3"
description = "Quantile Regression with Constrained B-Splines"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0-only"}
authors = [
    {name = "Alexandre Abbes", email = "alexandre.abbes@proton.me"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.14.0",
    "cvxpy>=1.5.0",
    "matplotlib>=3.9.0",
    "clarabel>=0.8.0",
    "pandas>=2.0.0",
    "openpyxl>=3.0.0",
]

[project.optional-dependencies]
mosek = ["mosek>=10.0.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "build>=1.2.0",
    "twine>=5.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "numpydoc>=1.6.0",
    "myst-parser>=3.0.0",
    "sphinx-intl>=2.0.0",
]

[project.urls]
"Documentation (FR)" = "https://bsplinequantregpy.readthedocs.io/fr/latest/"
"Documentation (EN)" = "https://bsplinequantregpy.readthedocs.io/en/latest/"
"Source" = "https://github.com/AlexandreAbbes/BsplineQuantRegpy"
"Issue Tracker" = "https://github.com/AlexandreAbbes/BsplineQuantRegpy/issues"
"Changelog" = "https://github.com/AlexandreAbbes/BsplineQuantRegpy/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"], include = ["BsplineQuantRegpy*"]}}

[tool.setuptools.package-data]
"BsplineQuantRegpy" = ["py.typed", "gui/*.py"]
"BsplineQuantRegpy.examples" = ["*.py", "*.xls", "*.csv", "*.ods"]
"*" = ["*.txt", "*.md", "*.xls", "*.csv", "*.ods"]