#####################

[metadata]
name = BsplineQuantRegpy
version = attr: BsplineQuantRegpy.__version__
author = Alexandre Abbes
author_email = alexandre.abbes@proton.me
url = https://github.com/AlexandreAbbes/BsplineQuantRegpy
description = Quantile regression with B-splines under shape constraints
license = GPL-3
long_description = file: README.md
long_description_content_type = text/markdown

keywords = quantile regression, splines, shape constraints, SOCP
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)  # Changé
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Mathematics

[options]
packages = find:
package_dir =
    = src
zip_safe = True
include_package_data = True
python_requires = >=3.9
install_requires =
    numpy>=1.26.0
    scipy>=1.14.0
    cvxpy>=1.5.0
    matplotlib>=3.9.0
    clarabel>=0.8.0
    pandas>=2.0.0
    openpyxl>=3.0.0

[options.packages.find]
where = src
include = BsplineQuantRegpy*

[options.package_data]
* = *.txt, *.md, *.xls, *.csv, *.ods
BsplineQuantRegpy = py.typed, gui/*.py
BsplineQuantRegpy.examples = *.py, *.xls, *.csv, *.ods

[options.extras_require]
mosek = mosek>=10.0.0
dev =
    pytest>=8.0.0
    pytest-cov>=5.0.0
    black>=24.0.0
    ruff>=0.6.0
    mypy>=1.10.0
    build>=1.2.0
    twine>=5.0.0
docs =
    sphinx>=7.0.0
    sphinx-rtd-theme>=2.0.0
    numpydoc>=1.6.0
    myst-parser>=3.0.0

[options.entry_points]
console_scripts =
    splinequant-gui = BsplineQuantRegpy.gui.Quant_reg_tk:main
    run-example-basic = BsplineQuantRegpy.examples.example_basic:main
    run-example-logistic = BsplineQuantRegpy.examples.logistic_example:main
    run-comparison = BsplineQuantRegpy.examples.comparison_example:main
